--- a/my-app/src/index.html
+++ b/my-app/src/index.html
@@ -6,6 +6,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400&amp;display=swap" rel="preload" as="style" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400&amp;display=swap" rel="stylesheet" crossorigin="">
 </head>
 <body>
   <app-root></app-root>
